Fix:tm: dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -5,6 +5,7 @@
 * {
     /*@apply dark:bg-black;*/
     background-color: var(--bg);
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
 :root {
